[package]
name = "vizshhist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.7", features = ["derive"] }
dirs = "4.0.0"
libc = "0.2.139"
nix = { version = "0.26.2", features = ["fs"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
tempfile = "3.4.0"
toml = "0.7.2"

[profile.release]
lto = true
